# thread_sdk

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt
examples/internal_test/: CMakeLists.txt  button_mtd.cmake  ftd.cmake  main_button_mtd.c  main_ftd.c  main_mtd.c  mtd.cmake
script/: test
src/: CMakeLists.txt  arm-none-eabi.cmake  openthread-core-RT58x-config.h  project_config.h
